# tefas-ui

./: .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  tefas_ui.py
.github/workflows/: publish.yml  test.yml  tests.yml
examples/: teb.txt
tests/: test_core.py
tests/data/outputs/: teb_try.txt  teb_try_weekend.txt  teb_usd.txt
