[metadata]
name = tefas_ui
version = 2022.10.27
long_description = file: README.md
long_description_content_type = text/markdown

[options]
py_modules = tefas_ui
install_requires =
    rich>=11.0.0
    tefas-crawler==0.3.3

[options.entry_points]
console_scripts =
    tefas-ui = tefas_ui:main

[options.extras_require]
forex =
    forex-python>=1.8
