[metadata]
name = tefas_ui
version = 2022.10.27
description = A terminal based UI for displaying P/L charts for your portfolio on TEFAS
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/isidentical/tefas-ui
author = isidentical
author_email = isidentical@gmail.com
license = MIT
license_file = LICENSE.txt
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
project_urls =
    Source = https://github.com/isidentical/tefas-ui
    Tracker = https://github.com/isidentical/tefas-ui/issues

[options]
py_modules = tefas_ui
install_requires =
    rich>=11.0.0
    tefas-crawler==0.3.3
python_requires = >=3.9

[options.entry_points]
console_scripts =
    tefas-ui = tefas_ui:main

[options.extras_require]
forex =
    forex-python>=1.8
